// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeaponEdit should render with full props 1`] = `
Array [
  <div
    className="nice-panel weapon-edit__description"
    id={undefined}
  >
    <div
      className="nice-panel-heading"
    >
      Description
    </div>
    <div
      className="nice-panel-content"
    >
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Name
        </span>
        <input
          className="nice-form-control"
          disabled={undefined}
          onChange={[Function]}
          onKeyPress={null}
          placeholder="Name..."
          type={undefined}
          value="Rapier"
        />
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Type
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Damage
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            1
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value={0}
              onClick={[Function]}
            >
              <a>
                0
              </a>
            </li>
            <li
              className="info"
              data-value={1}
              onClick={[Function]}
            >
              <a>
                1
              </a>
            </li>
            <li
              className={null}
              data-value={2}
              onClick={[Function]}
            >
              <a>
                2
              </a>
            </li>
            <li
              className={null}
              data-value={3}
              onClick={[Function]}
            >
              <a>
                3
              </a>
            </li>
            <li
              className={null}
              data-value={4}
              onClick={[Function]}
            >
              <a>
                4
              </a>
            </li>
            <li
              className={null}
              data-value={5}
              onClick={[Function]}
            >
              <a>
                5
              </a>
            </li>
            <li
              className={null}
              data-value={6}
              onClick={[Function]}
            >
              <a>
                6
              </a>
            </li>
            <li
              className={null}
              data-value={7}
              onClick={[Function]}
            >
              <a>
                7
              </a>
            </li>
            <li
              className={null}
              data-value={8}
              onClick={[Function]}
            >
              <a>
                8
              </a>
            </li>
            <li
              className={null}
              data-value={9}
              onClick={[Function]}
            >
              <a>
                9
              </a>
            </li>
            <li
              className={null}
              data-value={10}
              onClick={[Function]}
            >
              <a>
                10
              </a>
            </li>
            <li
              className={null}
              data-value={11}
              onClick={[Function]}
            >
              <a>
                11
              </a>
            </li>
            <li
              className={null}
              data-value={12}
              onClick={[Function]}
            >
              <a>
                12
              </a>
            </li>
            <li
              className={null}
              data-value={13}
              onClick={[Function]}
            >
              <a>
                13
              </a>
            </li>
            <li
              className={null}
              data-value={14}
              onClick={[Function]}
            >
              <a>
                14
              </a>
            </li>
            <li
              className={null}
              data-value={15}
              onClick={[Function]}
            >
              <a>
                15
              </a>
            </li>
            <li
              className={null}
              data-value={16}
              onClick={[Function]}
            >
              <a>
                16
              </a>
            </li>
            <li
              className={null}
              data-value={17}
              onClick={[Function]}
            >
              <a>
                17
              </a>
            </li>
            <li
              className={null}
              data-value={18}
              onClick={[Function]}
            >
              <a>
                18
              </a>
            </li>
            <li
              className={null}
              data-value={19}
              onClick={[Function]}
            >
              <a>
                19
              </a>
            </li>
          </ul>
        </div>
        <span
          className="nice-input-addon"
        >
          d
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            6
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value={4}
              onClick={[Function]}
            >
              <a>
                4
              </a>
            </li>
            <li
              className="info"
              data-value={6}
              onClick={[Function]}
            >
              <a>
                6
              </a>
            </li>
            <li
              className={null}
              data-value={8}
              onClick={[Function]}
            >
              <a>
                8
              </a>
            </li>
            <li
              className={null}
              data-value={10}
              onClick={[Function]}
            >
              <a>
                10
              </a>
            </li>
            <li
              className={null}
              data-value={12}
              onClick={[Function]}
            >
              <a>
                12
              </a>
            </li>
          </ul>
        </div>
        <span
          className="nice-input-addon"
        >
          +
        </span>
        <input
          className="nice-form-control"
          disabled={undefined}
          onChange={[Function]}
          onKeyPress={null}
          placeholder="Bonus..."
          type={undefined}
          value=""
        />
        <span
          className="nice-input-addon"
        >
          Type
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            Slashing
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className="info"
              data-value="slashing"
              onClick={[Function]}
            >
              <a>
                Slashing
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Versatile
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            1
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value={0}
              onClick={[Function]}
            >
              <a>
                0
              </a>
            </li>
            <li
              className="info"
              data-value={1}
              onClick={[Function]}
            >
              <a>
                1
              </a>
            </li>
            <li
              className={null}
              data-value={2}
              onClick={[Function]}
            >
              <a>
                2
              </a>
            </li>
            <li
              className={null}
              data-value={3}
              onClick={[Function]}
            >
              <a>
                3
              </a>
            </li>
            <li
              className={null}
              data-value={4}
              onClick={[Function]}
            >
              <a>
                4
              </a>
            </li>
            <li
              className={null}
              data-value={5}
              onClick={[Function]}
            >
              <a>
                5
              </a>
            </li>
            <li
              className={null}
              data-value={6}
              onClick={[Function]}
            >
              <a>
                6
              </a>
            </li>
            <li
              className={null}
              data-value={7}
              onClick={[Function]}
            >
              <a>
                7
              </a>
            </li>
            <li
              className={null}
              data-value={8}
              onClick={[Function]}
            >
              <a>
                8
              </a>
            </li>
            <li
              className={null}
              data-value={9}
              onClick={[Function]}
            >
              <a>
                9
              </a>
            </li>
            <li
              className={null}
              data-value={10}
              onClick={[Function]}
            >
              <a>
                10
              </a>
            </li>
            <li
              className={null}
              data-value={11}
              onClick={[Function]}
            >
              <a>
                11
              </a>
            </li>
            <li
              className={null}
              data-value={12}
              onClick={[Function]}
            >
              <a>
                12
              </a>
            </li>
            <li
              className={null}
              data-value={13}
              onClick={[Function]}
            >
              <a>
                13
              </a>
            </li>
            <li
              className={null}
              data-value={14}
              onClick={[Function]}
            >
              <a>
                14
              </a>
            </li>
            <li
              className={null}
              data-value={15}
              onClick={[Function]}
            >
              <a>
                15
              </a>
            </li>
            <li
              className={null}
              data-value={16}
              onClick={[Function]}
            >
              <a>
                16
              </a>
            </li>
            <li
              className={null}
              data-value={17}
              onClick={[Function]}
            >
              <a>
                17
              </a>
            </li>
            <li
              className={null}
              data-value={18}
              onClick={[Function]}
            >
              <a>
                18
              </a>
            </li>
            <li
              className={null}
              data-value={19}
              onClick={[Function]}
            >
              <a>
                19
              </a>
            </li>
          </ul>
        </div>
        <span
          className="nice-input-addon"
        >
          d
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            8
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value={4}
              onClick={[Function]}
            >
              <a>
                4
              </a>
            </li>
            <li
              className={null}
              data-value={6}
              onClick={[Function]}
            >
              <a>
                6
              </a>
            </li>
            <li
              className="info"
              data-value={8}
              onClick={[Function]}
            >
              <a>
                8
              </a>
            </li>
            <li
              className={null}
              data-value={10}
              onClick={[Function]}
            >
              <a>
                10
              </a>
            </li>
            <li
              className={null}
              data-value={12}
              onClick={[Function]}
            >
              <a>
                12
              </a>
            </li>
          </ul>
        </div>
        <span
          className="nice-input-addon"
        >
          +
        </span>
        <input
          className="nice-form-control"
          disabled={undefined}
          onChange={[Function]}
          onKeyPress={null}
          placeholder="Bonus..."
          type={undefined}
          value=""
        />
        <span
          className="nice-input-addon"
        >
          Type
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            Slashing
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className="info"
              data-value="slashing"
              onClick={[Function]}
            >
              <a>
                Slashing
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="clearfix"
      />
    </div>
  </div>,
  <div
    className="nice-panel weapon-edit__properties"
    id={undefined}
  >
    <div
      className="nice-panel-heading"
    >
      Properties
    </div>
    <div
      className="nice-panel-content"
    >
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Attributes
        </span>
        <div
          className="base-tag-container nice-tags-container"
        >
          <div
            className="nice-tag"
          >
            <span
              className="nice-tag-label"
            />
            <button
              className="nice-tag-btn"
              onClick={[Function]}
            >
              <i
                className="icon fa-trash-o"
              />
            </button>
          </div>
          <div
            className="nice-tag"
          >
            <span
              className="nice-tag-label"
            />
            <button
              className="nice-tag-btn"
              onClick={[Function]}
            >
              <i
                className="icon fa-trash-o"
              />
            </button>
          </div>
          <div
            className="nice-tag"
          >
            <span
              className="nice-tag-label"
            />
            <button
              className="nice-tag-btn"
              onClick={[Function]}
            >
              <i
                className="icon fa-trash-o"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Weight
        </span>
        <input
          className="nice-form-control"
          disabled={undefined}
          onChange={[Function]}
          onKeyPress={null}
          placeholder="Pounds..."
          type="float"
          value={2}
        />
        <span
          className="nice-input-addon"
        >
          lb.
        </span>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Value
        </span>
        <div
          className="base-tag-container nice-tags-container tag-value-container"
        >
          <div
            className="nice-dropdown nice-form-control"
          >
            <button
              className="nice-btn"
              onClick={[Function]}
            >
              Add...
              <i
                className="icon fa-angle-down"
              />
            </button>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <li
                className={null}
                data-value="cp"
                onClick={[Function]}
              >
                <a>
                  Copper
                </a>
              </li>
              <li
                className={null}
                data-value="sp"
                onClick={[Function]}
              >
                <a>
                  Silver
                </a>
              </li>
              <li
                className={null}
                data-value="ep"
                onClick={[Function]}
              >
                <a>
                  Electrum
                </a>
              </li>
              <li
                className={null}
                data-value="pp"
                onClick={[Function]}
              >
                <a>
                  Platinum
                </a>
              </li>
            </ul>
          </div>
          <div
            className="nice-tag"
          >
            <span
              className="nice-tag-label"
            >
              Gold
            </span>
            <span
              className="nice-tag-badge"
            >
              <input
                onChange={[Function]}
                type="number"
                value={3}
              />
            </span>
            <button
              className="nice-tag-btn"
              onClick={[Function]}
            >
              <i
                className="icon fa-trash-o"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        className="clearfix"
      />
    </div>
  </div>,
  <div
    className="nice-panel weapon-edit__special"
    id={undefined}
  >
    <div
      className="nice-panel-heading"
    >
      Special
    </div>
    <div
      className="nice-panel-content"
    >
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Description
        </span>
        <div
          className="markdown-textedit preview"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <textarea
            className="nice-form-control"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Description..."
            rows={5}
            value="En guarde"
          />
          <span
            className="markdown-textedit__preview"
          >
            <p>
              En guarde
            </p>
          </span>
        </div>
      </div>
      <div
        className="clearfix"
      />
    </div>
  </div>,
]
`;

exports[`WeaponEdit should render without props 1`] = `
Array [
  <div
    className="nice-panel weapon-edit__description"
    id={undefined}
  >
    <div
      className="nice-panel-heading"
    >
      Description
    </div>
    <div
      className="nice-panel-content"
    >
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Name
        </span>
        <input
          className="nice-form-control"
          disabled={undefined}
          onChange={[Function]}
          onKeyPress={null}
          placeholder="Name..."
          type={undefined}
          value=""
        />
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Type
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Damage
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            1
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value={0}
              onClick={[Function]}
            >
              <a>
                0
              </a>
            </li>
            <li
              className="info"
              data-value={1}
              onClick={[Function]}
            >
              <a>
                1
              </a>
            </li>
            <li
              className={null}
              data-value={2}
              onClick={[Function]}
            >
              <a>
                2
              </a>
            </li>
            <li
              className={null}
              data-value={3}
              onClick={[Function]}
            >
              <a>
                3
              </a>
            </li>
            <li
              className={null}
              data-value={4}
              onClick={[Function]}
            >
              <a>
                4
              </a>
            </li>
            <li
              className={null}
              data-value={5}
              onClick={[Function]}
            >
              <a>
                5
              </a>
            </li>
            <li
              className={null}
              data-value={6}
              onClick={[Function]}
            >
              <a>
                6
              </a>
            </li>
            <li
              className={null}
              data-value={7}
              onClick={[Function]}
            >
              <a>
                7
              </a>
            </li>
            <li
              className={null}
              data-value={8}
              onClick={[Function]}
            >
              <a>
                8
              </a>
            </li>
            <li
              className={null}
              data-value={9}
              onClick={[Function]}
            >
              <a>
                9
              </a>
            </li>
            <li
              className={null}
              data-value={10}
              onClick={[Function]}
            >
              <a>
                10
              </a>
            </li>
            <li
              className={null}
              data-value={11}
              onClick={[Function]}
            >
              <a>
                11
              </a>
            </li>
            <li
              className={null}
              data-value={12}
              onClick={[Function]}
            >
              <a>
                12
              </a>
            </li>
            <li
              className={null}
              data-value={13}
              onClick={[Function]}
            >
              <a>
                13
              </a>
            </li>
            <li
              className={null}
              data-value={14}
              onClick={[Function]}
            >
              <a>
                14
              </a>
            </li>
            <li
              className={null}
              data-value={15}
              onClick={[Function]}
            >
              <a>
                15
              </a>
            </li>
            <li
              className={null}
              data-value={16}
              onClick={[Function]}
            >
              <a>
                16
              </a>
            </li>
            <li
              className={null}
              data-value={17}
              onClick={[Function]}
            >
              <a>
                17
              </a>
            </li>
            <li
              className={null}
              data-value={18}
              onClick={[Function]}
            >
              <a>
                18
              </a>
            </li>
            <li
              className={null}
              data-value={19}
              onClick={[Function]}
            >
              <a>
                19
              </a>
            </li>
          </ul>
        </div>
        <span
          className="nice-input-addon"
        >
          d
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            4
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className="info"
              data-value={4}
              onClick={[Function]}
            >
              <a>
                4
              </a>
            </li>
            <li
              className={null}
              data-value={6}
              onClick={[Function]}
            >
              <a>
                6
              </a>
            </li>
            <li
              className={null}
              data-value={8}
              onClick={[Function]}
            >
              <a>
                8
              </a>
            </li>
            <li
              className={null}
              data-value={10}
              onClick={[Function]}
            >
              <a>
                10
              </a>
            </li>
            <li
              className={null}
              data-value={12}
              onClick={[Function]}
            >
              <a>
                12
              </a>
            </li>
          </ul>
        </div>
        <span
          className="nice-input-addon"
        >
          +
        </span>
        <input
          className="nice-form-control"
          disabled={undefined}
          onChange={[Function]}
          onKeyPress={null}
          placeholder="Bonus..."
          type={undefined}
          value=""
        />
        <span
          className="nice-input-addon"
        >
          Type
        </span>
        <div
          className="nice-dropdown nice-form-control"
        >
          <button
            className="nice-btn"
            onClick={[Function]}
          >
            Damage type
            <i
              className="icon fa-angle-down"
            />
          </button>
          <ul
            className="dropdown-menu"
            onClick={[Function]}
          >
            <li
              className={null}
              data-value="slashing"
              onClick={[Function]}
            >
              <a>
                Slashing
              </a>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="clearfix"
      />
    </div>
  </div>,
  <div
    className="nice-panel weapon-edit__properties"
    id={undefined}
  >
    <div
      className="nice-panel-heading"
    >
      Properties
    </div>
    <div
      className="nice-panel-content"
    >
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Attributes
        </span>
        <div
          className="base-tag-container nice-tags-container"
        />
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Weight
        </span>
        <input
          className="nice-form-control"
          disabled={undefined}
          onChange={[Function]}
          onKeyPress={null}
          placeholder="Pounds..."
          type="float"
          value=""
        />
        <span
          className="nice-input-addon"
        >
          lb.
        </span>
      </div>
      <div
        className="nice-control-group"
      >
        <span
          className="nice-input-addon"
        >
          Value
        </span>
        <div
          className="base-tag-container nice-tags-container tag-value-container"
        >
          <div
            className="nice-dropdown nice-form-control"
          >
            <button
              className="nice-btn"
              onClick={[Function]}
            >
              Add...
              <i
                className="icon fa-angle-down"
              />
            </button>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <li
                className={null}
                data-value="cp"
                onClick={[Function]}
              >
                <a>
                  Copper
                </a>
              </li>
              <li
                className={null}
                data-value="sp"
                onClick={[Function]}
              >
                <a>
                  Silver
                </a>
              </li>
              <li
                className={null}
                data-value="ep"
                onClick={[Function]}
              >
                <a>
                  Electrum
                </a>
              </li>
              <li
                className={null}
                data-value="gp"
                onClick={[Function]}
              >
                <a>
                  Gold
                </a>
              </li>
              <li
                className={null}
                data-value="pp"
                onClick={[Function]}
              >
                <a>
                  Platinum
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        className="clearfix"
      />
    </div>
  </div>,
]
`;
